ncp-features-example/2.4.1-service-nodeport/nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-nodeport
  namespace: ncp-feature
  labels:
    feature: service-nodeport 
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    feature: service-nodeport
  type: NodePort
