ncp-features-example/2.4.1-service-nodeport/nginx-web-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-web-service-nodeport
  namespace: ncp-feature
  labels:
    feature: service-nodeport
spec:
  podSelector:
    matchLabels:
      feature: service-nodeport      
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 100.64.0.0/16
    ports:
    - protocol: TCP
      port: 80
